--- a/home.html
+++ b/home.html
@@ -13,20 +13,16 @@
   </head>
   <body>
     <div class="container mt-5">    
-        <!-- <div class="btn-group"> A class to eliminate any spaces between the buttons -->
-      <button type="button" class="btn btn-primary btn-sm">Primary</button>
-      <button type="button" class="btn btn-primary">Primary</button>
-      <button type="button" class="btn btn-primary btn-lg">Primary</button>
-      <button type="button" class="btn btn-primary btn-lg disabled">Primary</button>
-      <button type="button" class="btn btn-secondary btn-lg">Secondary</button>
-      <button type="button" class="btn btn-success btn-lg">Success</button>
-      <button type="button" class="btn btn-danger btn-lg">Danger</button>
-      <button type="button" class="btn btn-warning btn-lg">Warning</button>
-      <button type="button" class="btn btn-info btn-lg">Info</button>
-      <button type="button" class="btn btn-light btn-lg">Light</button>
-      <button type="button" class="btn btn-dark btn-lg">Dark</button>
-      <button type="button" class="btn btn-outline-dark">Dark On Hover</button>
-    <!-- </div> -->
+    <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown">
+            Dropdown button
+        </button>
+        <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Do something</a></li>
+            <li><a class="dropdown-item" href="#">Do something else</a></li>
+            <li><a class="dropdown-item" href="#">Do something else else</a></li>
+        </ul>
+    </div>
 </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
