--- a/home.html
+++ b/home.html
@@ -12,18 +12,24 @@
     />
   </head>
   <body>
-    <div class="container mt-5">    
-    <div class="dropdown">
-        <button class="btn btn-secondary dropdown-toggle" data-bs-toggle="dropdown">
-            Dropdown button
-        </button>
-        <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Do something</a></li>
-            <li><a class="dropdown-item" href="#">Do something else</a></li>
-            <li><a class="dropdown-item" href="#">Do something else else</a></li>
-        </ul>
+
+    <div class="container mt-5">
+      <div class="card">
+        <h5 class="card-header">Featured Post</h5>
+        <div class="card-body">
+          <h5 class="card-title">Great post</h5>
+          <p class="card-text">Info about the post</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+        <div class="card-footer">
+            1 day ago
+        </div>
+        <div class="card-footer text-muted">    <!-- text-muted effects the text -->
+            2 days ago
+        </div>
+      </div>
     </div>
-</div>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
@@ -31,14 +37,3 @@
     ></script>
   </body>
 </html>
-
-<!-- mt-2 = margin-top -->
-<!-- mb = margin-bottom -->
-<!-- ml = margin-left -->
-<!-- mr = margin-right -->
-<!-- mt = margin-top -->
-<!-- m = margin all around -->
-<!-- m-2 = margin of 2 measurements units-->
-
-
-
