--- a/home.html
+++ b/home.html
@@ -12,22 +12,15 @@
     />
   </head>
   <body>
-
     <div class="container mt-5">
-      <div class="card">
-        <h5 class="card-header">Featured Post</h5>
-        <div class="card-body">
-          <h5 class="card-title">Great post</h5>
-          <p class="card-text">Info about the post</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
-        </div>
-        <div class="card-footer">
-            1 day ago
-        </div>
-        <div class="card-footer text-muted">    <!-- text-muted effects the text -->
-            2 days ago
-        </div>
-      </div>
+      <div class="alert alert-primary" role="alert">primary alert <a href="#">With a link</a></div>
+      <div class="alert alert-secondary" role="alert">secondary alert</div>
+      <div class="alert alert-success" role="alert">success alert</div>
+      <div class="alert alert-danger" role="alert">danger alert <a href="#"> Are you sure...?</a></div>
+      <div class="alert alert-warning" role="alert">warning alert</div>
+      <div class="alert alert-info" role="alert">info alert</div>
+      <div class="alert alert-light" role="alert">light alert</div>
+      <div class="alert alert-dark" role="alert">dark alert</div>
     </div>
 
     <script
