--- a/home.html
+++ b/home.html
@@ -13,14 +13,16 @@
   </head>
   <body>
     <div class="container mt-5">
-      <div class="alert alert-primary" role="alert">primary alert <a href="#">With a link</a></div>
-      <div class="alert alert-secondary" role="alert">secondary alert</div>
-      <div class="alert alert-success" role="alert">success alert</div>
-      <div class="alert alert-danger" role="alert">danger alert <a href="#"> Are you sure...?</a></div>
-      <div class="alert alert-warning" role="alert">warning alert</div>
-      <div class="alert alert-info" role="alert">info alert</div>
-      <div class="alert alert-light" role="alert">light alert</div>
-      <div class="alert alert-dark" role="alert">dark alert</div>
+      <div class="spinner-border text-primary" role="status">
+        <span class="visually-hidden">Loading...</span>
+      </div>
+      <div class="spinner-grow text-primary" role="status">
+        <span class="visually-hidden">Loading...</span>
+      </div>
+      <button class="btn btn-primary" type="button" disabled>
+        <span class="spinner-border spinner-border-sm"></span>
+        Loading...
+      </button>
     </div>
 
     <script
