--- a/home.html
+++ b/home.html
@@ -12,17 +12,20 @@
     />
   </head>
   <body>
+
     <div class="container mt-5">
-      <div class="spinner-border text-primary" role="status">
-        <span class="visually-hidden">Loading...</span>
+      <div class="progress">
+        <div class="progress-bar" style="width: 75%">75%</div>
       </div>
-      <div class="spinner-grow text-primary" role="status">
-        <span class="visually-hidden">Loading...</span>
+
+      <div class="progress mt-5">
+        <div class="progress-bar progress-bar-striped" style="width: 75%">75%</div>
       </div>
-      <button class="btn btn-primary" type="button" disabled>
-        <span class="spinner-border spinner-border-sm"></span>
-        Loading...
-      </button>
+
+      <div class="progress mt-5">
+        <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 75%">75%</div>
+      </div>
+
     </div>
 
     <script
