--- a/home.html
+++ b/home.html
@@ -13,17 +13,21 @@
   </head>
   <body>
     <div class="container mt-5">
-      <button
-        class="btn btn-primary"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#collapseExample"
-      >
-        Click Here
-      </button>
+      <div class="accordion">
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <div class="accordion-button" type="button"
+             data-bs-toggle="collapse" data-bs-target="#collapseOne">
+              Learn More Here
+            </div>
+          </h2>
 
-      <div class="collapse" id="collapseExample">
-        <div class="card card-body">Hide comments until button is pressed</div> <!-- This card div is optional -->
+          <div id="collapseOne" class="accordion-collapse collapse show">
+            <div class="accordion-body">
+              Here is what you can learn
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
