--- a/home.html
+++ b/home.html
@@ -12,24 +12,47 @@
     />
   </head>
   <body>
-    <div class="container mt-5">
-      <div class="accordion">
-        <div class="accordion-item">
-          <h2 class="accordion-header">
-            <div class="accordion-button" type="button"
-             data-bs-toggle="collapse" data-bs-target="#collapseOne">
-              Learn More Here
-            </div>
-          </h2>
+    <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light"> --> <!-- An option for a light settings -->
+    <!-- <nav class="navbar navbar-expand-lg navbar-primary bg-primary"> --> <!-- An option for a blue settings -->
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark"> navbar-dark is controlling the text and bg-dark is controlling the background
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Navigation Bar</a>
 
-          <div id="collapseOne" class="accordion-collapse collapse show">
-            <div class="accordion-body">
-              Here is what you can learn
-            </div>
-          </div>
+        <!-- If the three lines icon does not appear on a small screen we can add a button for it -->
+         <!-- <button class="navbar-toggler" type="button"
+         data-bs-toggle="collapse" data-bs-target="#ournavbar">
+        <span class="navbar-toggler-icon"></span>
+         </button> -->
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#ournavbar"
+          aria-controls="ournavbar"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="ournavbar">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Blog</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link disabled" href="#">Contact us</a>
+            </li>
+          </ul>
         </div>
       </div>
-    </div>
+    </nav>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
