--- a/home.html
+++ b/home.html
@@ -12,47 +12,18 @@
     />
   </head>
   <body>
-    <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light"> --> <!-- An option for a light settings -->
-    <!-- <nav class="navbar navbar-expand-lg navbar-primary bg-primary"> --> <!-- An option for a blue settings -->
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark"> navbar-dark is controlling the text and bg-dark is controlling the background
-      <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navigation Bar</a>
-
-        <!-- If the three lines icon does not appear on a small screen we can add a button for it -->
-         <!-- <button class="navbar-toggler" type="button"
-         data-bs-toggle="collapse" data-bs-target="#ournavbar">
-        <span class="navbar-toggler-icon"></span>
-         </button> -->
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#ournavbar"
-          aria-controls="ournavbar"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <div class="collapse navbar-collapse" id="ournavbar">
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Blog</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled" href="#">Contact us</a>
-            </li>
-          </ul>
-        </div>
+    
+    <div class="container mt-3">
+      <div class="row"> <!-- We can devide each row to up to 12 columns -->
+       <!-- <div class="col-10"> --> <!-- This is for no differentiation of screen size -->
+        <div class="col-lg-12 col"> <!-- col-lg-12 meant that on large screens this would take the entire row and on smaller screens it would fit the available space on the row -->
+         Test
+       </div>
+       <div class="col">
+        Test
       </div>
-    </nav>
+    </div>
+  </div>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
