--- a/home.html
+++ b/home.html
@@ -12,18 +12,22 @@
     />
   </head>
   <body>
-    
     <div class="container mt-3">
-      <div class="row"> <!-- We can devide each row to up to 12 columns -->
-       <!-- <div class="col-10"> --> <!-- This is for no differentiation of screen size -->
-        <div class="col-lg-12 col"> <!-- col-lg-12 meant that on large screens this would take the entire row and on smaller screens it would fit the available space on the row -->
-         Test
-       </div>
-       <div class="col">
-        Test
+      <div class="row">
+        <!-- We can devide each row to up to 12 columns -->
+        <!-- <div class="col-10"> -->
+        <!-- This is for no differentiation of screen size -->
+        <div class="col">
+          <div class="row">
+            <div class="col">Column</div>
+            <div class="col">Column</div>
+            <div class="col">Column</div>
+            <div class="col">Column</div>
+          </div>
+        </div>
+        <div class="col">Column</div>
       </div>
     </div>
-  </div>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
