--- a/home.html
+++ b/home.html
@@ -13,20 +13,90 @@
   </head>
   <body>
     <div class="container mt-3">
-      <div class="row">
-        <!-- We can devide each row to up to 12 columns -->
-        <!-- <div class="col-10"> -->
-        <!-- This is for no differentiation of screen size -->
-        <div class="col">
-          <div class="row">
-            <div class="col">Column</div>
-            <div class="col">Column</div>
-            <div class="col">Column</div>
-            <div class="col">Column</div>
-          </div>
-        </div>
-        <div class="col">Column</div>
-      </div>
+      <table class="table table-striped"><!-- A striped table -->
+        <thead>
+          <tr>
+            <th>#</th>
+            <th>First</th>
+            <th>Last</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th>1</th>
+            <td>Eric</td>
+            <td>Roby</td>
+          </tr>
+          <tr>
+            <th>2</th>
+            <td>Chad</td>
+            <td>Darby</td>
+          </tr>
+          <tr>
+            <th>3</th>
+            <td>Milo</td>
+            <td>Roby</td>
+          </tr>
+        </tbody>
+      </table>
+
+      <br />
+
+      <table class="table table-hover"><!-- Striped when hovered -->
+        <thead>
+          <tr>
+            <th>#</th>
+            <th>First</th>
+            <th>Last</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th>1</th>
+            <td>Eric</td>
+            <td>Roby</td>
+          </tr>
+          <tr>
+            <th>2</th>
+            <td>Chad</td>
+            <td>Darby</td>
+          </tr>
+          <tr>
+            <th>3</th>
+            <td>Milo</td>
+            <td>Roby</td>
+          </tr>
+        </tbody>
+      </table>
+
+      <br>
+
+      <table class="table table-dark"><!-- A dark table (can also be danger/success/etc.) -->
+        <thead>
+          <tr>
+            <th>#</th>
+            <th>First</th>
+            <th>Last</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th>1</th>
+            <td>Eric</td>
+            <td>Roby</td>
+          </tr>
+          <tr>
+            <th>2</th>
+            <td>Chad</td>
+            <td>Darby</td>
+          </tr>
+          <tr>
+            <th>3</th>
+            <td>Milo</td>
+            <td>Roby</td>
+          </tr>
+        </tbody>
+      </table>
     </div>
 
     <script
