--- a/home.html
+++ b/home.html
@@ -13,90 +13,46 @@
   </head>
   <body>
     <div class="container mt-3">
-      <table class="table table-striped"><!-- A striped table -->
-        <thead>
-          <tr>
-            <th>#</th>
-            <th>First</th>
-            <th>Last</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <th>1</th>
-            <td>Eric</td>
-            <td>Roby</td>
-          </tr>
-          <tr>
-            <th>2</th>
-            <td>Chad</td>
-            <td>Darby</td>
-          </tr>
-          <tr>
-            <th>3</th>
-            <td>Milo</td>
-            <td>Roby</td>
-          </tr>
-        </tbody>
-      </table>
+      <form>
+        <div class="mb-3">
+          <label class="form-label"> Email address </label>
+          <input
+            class="form-control"
+            type="email"
+            placeholder="name@example.com"
+          />
+        </div>
+        <div class="mb-3">
+          <label class="form-label"> Example textarea </label>
+          <textarea class="form-control" rows="3"></textarea>
+        </div>
 
-      <br />
+        <div class="form-check">
+          <input class="form-check-input" type="checkbox" id="checkdefault" />
+          <label class="form-check-label" for="checkdefault"
+            >Default checkbox</label
+          >
+        </div>
+        <div class="form-check">
+          <input class="form-check-input" type="radio" id="checkdefault" />
+          <label class="form-check-label" for="checkdefault"
+            >Default checkbox</label
+          >
+        </div>
+        <div class="form-check">
+          <input
+            class="form-check-input"
+            type="checkbox"
+            id="checkdefault"
+            checked
+          />
+          <label class="form-check-label" for="checkdefault" checked
+            >Strats checked checkbox</label
+          >
+        </div>
 
-      <table class="table table-hover"><!-- Striped when hovered -->
-        <thead>
-          <tr>
-            <th>#</th>
-            <th>First</th>
-            <th>Last</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <th>1</th>
-            <td>Eric</td>
-            <td>Roby</td>
-          </tr>
-          <tr>
-            <th>2</th>
-            <td>Chad</td>
-            <td>Darby</td>
-          </tr>
-          <tr>
-            <th>3</th>
-            <td>Milo</td>
-            <td>Roby</td>
-          </tr>
-        </tbody>
-      </table>
-
-      <br>
-
-      <table class="table table-dark"><!-- A dark table (can also be danger/success/etc.) -->
-        <thead>
-          <tr>
-            <th>#</th>
-            <th>First</th>
-            <th>Last</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <th>1</th>
-            <td>Eric</td>
-            <td>Roby</td>
-          </tr>
-          <tr>
-            <th>2</th>
-            <td>Chad</td>
-            <td>Darby</td>
-          </tr>
-          <tr>
-            <th>3</th>
-            <td>Milo</td>
-            <td>Roby</td>
-          </tr>
-        </tbody>
-      </table>
+        <button class="btn btn-primary" type="submit">Submit form</button>
+      </form>
     </div>
 
     <script
