--- a/home.html
+++ b/home.html
@@ -13,46 +13,35 @@
   </head>
   <body>
     <div class="container mt-3">
-      <form>
-        <div class="mb-3">
-          <label class="form-label"> Email address </label>
-          <input
-            class="form-control"
-            type="email"
-            placeholder="name@example.com"
-          />
-        </div>
-        <div class="mb-3">
-          <label class="form-label"> Example textarea </label>
-          <textarea class="form-control" rows="3"></textarea>
-        </div>
+      <button
+        type="button"
+        class="btn btn-primary"
+        data-bs-toggle="modal"
+        data-bs-target="#openmodal"
+      >Launch Modal</button>
 
-        <div class="form-check">
-          <input class="form-check-input" type="checkbox" id="checkdefault" />
-          <label class="form-check-label" for="checkdefault"
-            >Default checkbox</label
-          >
-        </div>
-        <div class="form-check">
-          <input class="form-check-input" type="radio" id="checkdefault" />
-          <label class="form-check-label" for="checkdefault"
-            >Default checkbox</label
-          >
-        </div>
-        <div class="form-check">
-          <input
-            class="form-check-input"
-            type="checkbox"
-            id="checkdefault"
-            checked
-          />
-          <label class="form-check-label" for="checkdefault" checked
-            >Strats checked checkbox</label
-          >
-        </div>
+      <div class="modal fade" id="openmodal">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h1 class="modal-title">Hello !</h1>
+              <button
+                type="button"
+                class="btn-close"
+                data-bs-dismiss="modal"
+              ></button>
+            </div>
 
-        <button class="btn btn-primary" type="submit">Submit form</button>
-      </form>
+            <div class="modal-body">Welcome !</div>
+
+            <div class="modal-footer">
+              <button type="button" class="btn btn-primary">
+                Save Changes
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
     <script
