--- a/home.html
+++ b/home.html
@@ -13,34 +13,19 @@
   </head>
   <body>
     <div class="container mt-3">
-      <button
-        type="button"
-        class="btn btn-primary"
-        data-bs-toggle="modal"
-        data-bs-target="#openmodal"
-      >Launch Modal</button>
-
-      <div class="modal fade" id="openmodal">
-        <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h1 class="modal-title">Hello !</h1>
-              <button
-                type="button"
-                class="btn-close"
-                data-bs-dismiss="modal"
-              ></button>
-            </div>
-
-            <div class="modal-body">Welcome !</div>
-
-            <div class="modal-footer">
-              <button type="button" class="btn btn-primary">
-                Save Changes
-              </button>
-            </div>
-          </div>
-        </div>
+      <div class="d-none d-md-block">
+        These elements will be hidden on small screens but visible on medium
+        screens and up
+        <button type="button" class="btn btn-success btn-sm">
+          Button for medium screens and up
+        </button>
+      </div>
+      <div class="d-md-none d-block">
+        These elements will be hidden on medium screens and up but
+        visible on small screens
+        <button type="button" class="btn btn-primary btn-sm">
+          Button for small screens only
+        </button>
       </div>
     </div>
 
